# sytter

./: .gitignore  Cargo.toml  README.org  build.rs  flake.nix  llms.org  rustfmt.toml  wrapper.h
.cargo-husky/hooks/: pre-commit
examples/: bluetooth-disabled-on-sleep.toml  captive-portal.toml  hello-world.toml  macos-keyboard-rebind.toml
lib/macos-bindings/: Cargo.toml  build.rs
lib/macos-bindings/src/: lib.rs  macos_bindings.rs  macos_bindings_emitted.rs
nix/: nix-darwin.nix  package.nix
src/: cli.rs  condition.rs  config.rs  deserialize.rs  error.rs  executor.rs  failure.rs  http_server.rs  logging.rs  macos_bindings.rs  macos_bindings_emitted.rs  main.rs  power_macos.rs  shell-functions.sh  shell.rs  state.rs  sytter.rs  trigger.rs  watcher.rs
src/contrib/: cron.rs  device.rs  mod.rs  power.rs  shell.rs
src/macos/: device.rs  event.rs  mod.rs  native.rs  power.rs
tests/: cron_trigger_test.rs  device_trigger_test.rs  manual_device_properties_test.sh
tests/fixtures/: test_cron.toml  test_device.toml  test_device_properties.toml
