[package]
name = "sytter"
version = "0.1.0"
authors = ["Logan Barnett <logustus@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.1"
# bindgen = {git = "https://github.com/LoganBarnett/rust-bindgen.git", ref = "0e8000e2d62d5c5b067d2b0ea0d4fc553c9712a0"}

[dependencies]
# Allow declaring async functions in traits.  Doing non-trivial code in Rust
# basically makes this crate mandatory.
async-trait = "*"
# Command Line Argument Parsing.
clap = { version = "4.3.19", features = ["derive"] }
# Allow us to increase verbosity with additional v's in -v. For example, we can
# use -v for verbose, -vv for extra verbose, and -vvv for even more verobisty.
clap-verbosity-flag = "2.0.1"
# In order to reference parts of cron scheduling that tokio-cron-scheduler uses,
# we need to explicitly declare cron as a dependency as well.
cron = "*"
# I don't know if we need this still.
futures = "*"
# Allows us to initialize complex data (like a HashMap with stuff in it) that is
# globally accessible.
lazy_static = "1.4.0"
# Give us a generalized logger.
log = "*"
# num and friends allow us to convert numbers into enums, which is useful for
# working with native bindings.
num-derive = "0.4.1"
num = "0.4.1"
num-traits = "0.2.17"
# Handles messaging with Objective-C message sending of objects.
objc = "*"
# Serde gives us generalized serializing/deserializing, which we use for reading
# in Sytter configurations.
serde = { version = "*", features = ["derive"] }
# Convert from one format to another, I think. I need to check if this is
# actually necessary. It was lifted from another project.
serdeconv = "*"
# Allow us to deserialize traits so sytter components can vary.
serde_traitobject= "*"
# Logging should always go to stderr. Reserve stdout for potentially parsable
# output.
stderrlog = "*"
# strum and friends allows us to easily convery Strings to enums.
strum = "0.25"
strum_macros = "0.25.3"
# Give us a concurrency model. Needed for handling events.
#
# Look here if we're trying to get size down. Unsure what features we'll need
# currently. I just want it to work.
tokio = { version = "1.25.0", features = ["full"] }
# For handling cron parsing and triggering.
tokio-cron-scheduler = "0.9.4"
# A serde handler for toml files, so we can read sytter definitions.
toml = "*"
